deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyek-autospec
  namespace: autospec
spec:
  type: ClusterIP
  selector:
    app: proyek-autospec
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
